--- a/exercices/cours-04/04-Exercice/01-site-corrigé/index.html
+++ b/exercices/cours-04/04-Exercice/01-site-corrigé/index.html
@@ -1,8 +1,7 @@
 <!doctype html>
-<html>
+<html lang="fr">
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Nature et Web</title>
         <link rel="stylesheet" href="style.css">
     </head>
