--- a/exercices/cours-07/01-jQuery afficher et masquer/index.html
+++ b/exercices/cours-07/01-jQuery afficher et masquer/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>jQuery</title>
+        <title>jQuery - Afficher/Masquer</title>
         <link rel="stylesheet" href="style.css">
 
     </head>
