--- a/exercices/cours-09/01-corrige/index.html
+++ b/exercices/cours-09/01-corrige/index.html
@@ -107,6 +107,7 @@
 
         <script src="js/jquery.1.11.3.min.js"></script>
         <script src="js/slick/slick.min.js"></script>
+        <script src="js/jquery.matchHeight.js"></script>
         <script src="js/script.js"></script>
     </body>
 </html>
