--- a/exercices/cours-09/01-corrige/index.html
+++ b/exercices/cours-09/01-corrige/index.html
@@ -6,6 +6,7 @@
 
         <link rel="stylesheet" href="js/slick/slick.css">
         <link rel="stylesheet" href="js/slick/slick-theme.css">
+        <link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="css/style.css" />
     </head>
     <body>
@@ -102,8 +103,39 @@
                 </div>
             </div>
             
-            
         </div>
+
+        <footer class="crop">
+            <nav class="footer-nav">
+                <ul>
+                    <li class="active"><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Projects</a></li>
+                    <li class="last"><a href="#">Clients</a></li>
+                </ul>
+            </nav>
+            <div class="footer-bottom">
+                <div class="footer-credits">
+                    &copy; 2017 Bla bla bla
+                </div>
+                <div class="footer-socials">
+                    <nav>
+                        <ul>
+                            <li><a href="#">
+                                <i class="fa fa-twitter"></i>
+                            </a></li>
+                            <li><a href="#">
+                                <i class="fa fa-facebook"></i>
+                            </a></li>
+                            <li><a href="#">
+                                <i class="fa fa-google-plus"></i>
+                            </a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </footer>
 
         <script src="js/jquery.1.11.3.min.js"></script>
         <script src="js/slick/slick.min.js"></script>
