--- a/exercices/cours-09/01-corrige/index.html
+++ b/exercices/cours-09/01-corrige/index.html
@@ -4,6 +4,9 @@
         <meta charset="utf-8" />
         <title>Accueil</title>
 
+        <!-- Meta viewport pour permettre le responsive -->
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+
         <link rel="stylesheet" href="js/slick/slick.css">
         <link rel="stylesheet" href="js/slick/slick-theme.css">
         <link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome.min.css">
