Mise a jour cours 14

--- a/exercices/cours-14/app-chat/index.html
+++ b/exercices/cours-14/app-chat/index.html
@@ -47,7 +47,7 @@
               <div class="m-avatar"><img src="http://placehold.it/50x50" alt=""></div>
               <div class="m-infos">
                 <div class="name">Matt Thompson</div>
-                <div class="message">Thanks again you have been</div>
+                <div class="message">Thanks again you have been. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim amet magnam excepturi rem deleniti odio modi totam dolor, esse tempore alias sapiente nihil assumenda unde ea obcaecati, similique ratione quibusdam est ipsam animi eius temporibus omnis. Odit illum a fuga!</div>
               </div>
               <div class="m-metas">
                 <div class="m-metas-actions">...</div>
@@ -57,8 +57,8 @@
             <div class="friends-list-messages-item">
               <div class="m-avatar"><img src="http://placehold.it/50x50" alt=""></div>
               <div class="m-infos">
-                <div class="name">Matt Thompson</div>
-                <div class="message">Thanks again you have been</div>
+                <div class="name">Claire Sharwood</div>
+                <div class="message">My selfie game is lacking can</div>
               </div>
               <div class="m-metas">
                 <div class="m-metas-actions">...</div>
@@ -68,8 +68,8 @@
             <div class="friends-list-messages-item">
               <div class="m-avatar"><img src="http://placehold.it/50x50" alt=""></div>
               <div class="m-infos">
-                <div class="name">Matt Thompson</div>
-                <div class="message">Thanks again you have been</div>
+                <div class="name">Kirsten Mckellar</div>
+                <div class="message">Where is the nearest place to</div>
               </div>
               <div class="m-metas">
                 <div class="m-metas-actions">...</div>
@@ -79,8 +79,30 @@
             <div class="friends-list-messages-item">
               <div class="m-avatar"><img src="http://placehold.it/50x50" alt=""></div>
               <div class="m-infos">
-                <div class="name">Matt Thompson</div>
-                <div class="message">Thanks again you have been</div>
+                <div class="name">Shaun Gardner</div>
+                <div class="message">Ok that sounds perfect</div>
+              </div>
+              <div class="m-metas">
+                <div class="m-metas-actions">...</div>
+                <div class="m-metas-time">5 min</div>
+              </div>
+            </div>
+            <div class="friends-list-messages-item">
+              <div class="m-avatar"><img src="http://placehold.it/50x50" alt=""></div>
+              <div class="m-infos">
+                <div class="name">Mace Windu</div>
+                <div class="message">Protect the senator at all costs</div>
+              </div>
+              <div class="m-metas">
+                <div class="m-metas-actions">...</div>
+                <div class="m-metas-time">5 min</div>
+              </div>
+            </div>
+            <div class="friends-list-messages-item">
+              <div class="m-avatar"><img src="http://placehold.it/50x50" alt=""></div>
+              <div class="m-infos">
+                <div class="name">Kanye West</div>
+                <div class="message">So tell the voice inside your</div>
               </div>
               <div class="m-metas">
                 <div class="m-metas-actions">...</div>
