--- a/exercices/cours-14/app-chat/index.html
+++ b/exercices/cours-14/app-chat/index.html
@@ -43,7 +43,7 @@
             </form>
           </div>
           <div class="friends-list-messages">
-            <div class="friends-list-messages-item">
+            <a href="#" class="friends-list-messages-item connected">
               <div class="m-avatar"><img src="http://placehold.it/50x50" alt=""></div>
               <div class="m-infos">
                 <div class="name">Matt Thompson</div>
@@ -53,8 +53,8 @@
                 <div class="m-metas-actions">...</div>
                 <div class="m-metas-time">5 min</div>
               </div>
-            </div>
-            <div class="friends-list-messages-item">
+            </a>
+            <a href="#" class="friends-list-messages-item">
               <div class="m-avatar"><img src="http://placehold.it/50x50" alt=""></div>
               <div class="m-infos">
                 <div class="name">Claire Sharwood</div>
@@ -64,8 +64,8 @@
                 <div class="m-metas-actions">...</div>
                 <div class="m-metas-time">5 min</div>
               </div>
-            </div>
-            <div class="friends-list-messages-item">
+            </a>
+            <a href="#" class="friends-list-messages-item active">
               <div class="m-avatar"><img src="http://placehold.it/50x50" alt=""></div>
               <div class="m-infos">
                 <div class="name">Kirsten Mckellar</div>
@@ -75,8 +75,8 @@
                 <div class="m-metas-actions">...</div>
                 <div class="m-metas-time">5 min</div>
               </div>
-            </div>
-            <div class="friends-list-messages-item">
+            </a>
+            <a href="#" class="friends-list-messages-item connected">
               <div class="m-avatar"><img src="http://placehold.it/50x50" alt=""></div>
               <div class="m-infos">
                 <div class="name">Shaun Gardner</div>
@@ -86,8 +86,8 @@
                 <div class="m-metas-actions">...</div>
                 <div class="m-metas-time">5 min</div>
               </div>
-            </div>
-            <div class="friends-list-messages-item">
+            </a>
+            <a href="#" class="friends-list-messages-item connected">
               <div class="m-avatar"><img src="http://placehold.it/50x50" alt=""></div>
               <div class="m-infos">
                 <div class="name">Mace Windu</div>
@@ -97,8 +97,8 @@
                 <div class="m-metas-actions">...</div>
                 <div class="m-metas-time">5 min</div>
               </div>
-            </div>
-            <div class="friends-list-messages-item">
+            </a>
+            <a href="#" class="friends-list-messages-item">
               <div class="m-avatar"><img src="http://placehold.it/50x50" alt=""></div>
               <div class="m-infos">
                 <div class="name">Kanye West</div>
@@ -108,7 +108,7 @@
                 <div class="m-metas-actions">...</div>
                 <div class="m-metas-time">5 min</div>
               </div>
-            </div>
+            </a>
           </div>
         </div>
         <div class="chat">
