--- a/exercices/cours-14/app-chat/index.html
+++ b/exercices/cours-14/app-chat/index.html
@@ -142,7 +142,44 @@
               <li><button><i class="icon ion-ios-videocam"></i></button></li>
             </ul>
           </div>
-        	<div class="chat-content">lorem</div>
+        	<div class="chat-content">
+            <div class="chat-msg chat-msg-other">
+              <div class="chat-msg-avatar">
+                <img src="http://placehold.it/35x35" alt="">
+                <div class="time">12:47</div>
+              </div>
+              <div class="chat-msg-content">
+                It goes a little something like this.
+              </div>
+            </div>
+            <div class="chat-msg chat-msg-other">
+              <div class="chat-msg-avatar">
+                <img src="http://placehold.it/35x35" alt="">
+                <div class="time">12:38</div>
+              </div>
+              <div class="chat-msg-content">
+                It was all a dream, I used to read Word Up magazine Salt'n'Pepa and Heavy D up in the limousine.
+              </div>
+            </div>
+            <div class="chat-msg chat-msg-me">
+              <div class="chat-msg-avatar">
+                <img src="http://placehold.it/35x35" alt="">
+                <div class="time">12:39</div>
+              </div>
+              <div class="chat-msg-content">
+                Did you ever Hang' pictures on your wall?
+              </div>
+            </div>
+            <div class="chat-msg chat-msg-other">
+              <div class="chat-msg-avatar">
+                <img src="http://placehold.it/35x35" alt="">
+                <div class="time">12:40</div>
+              </div>
+              <div class="chat-msg-content">
+                Yes I did! Every Saturday! Rap Attack, Mr. Magic, Marley Marl. I even let my tape rock 'til my tape popped. Smokin' weed and bamboo, sippin' on private stock.  But this was way back, when I had the red and black lumberjack with the hat to match.
+              </div>
+            </div>
+          </div>
         	<div class="chat-form">lorem</div>
         </div>
     </body>
