--- a/exercices/cours-14/app-chat/index.html
+++ b/exercices/cours-14/app-chat/index.html
@@ -180,7 +180,15 @@
               </div>
             </div>
           </div>
-        	<div class="chat-form">lorem</div>
+        	<div class="chat-form">
+            <form action="#">
+              <textarea name="my-msg" id="my-msg" placeholder="Type your message..."></textarea>
+              <button type="submit"><i class="icon ion-android-send"></i></button>
+            </form>
+          </div>
         </div>
+
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+        <script src="script.js"></script>
     </body>
 </html>
